<resources>
    <string name="app_name">covidkenya</string>
    <string name="cases">Cases</string>
    <string name="short_dash">__</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="more_updates">more updates</string>
    <string name="health_units">Health Centers</string>
    <string name="news">News</string>
    <string name="feeling">How are you feeling?</string>
    <string name="talk_to_a_doctor">talk to a Specialist</string>
    <string name="tips">Tips</string>
    <string name="what_is_corona_virus">What is corona virus?</string>
    <string name="official_updates">Official Updates</string>
    <string name="image_description">image description</string>
    <string name="feeling_bad">feeling_bad</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    Exposure Notification-->
    <plurals name="possible_exposure_subheading">
        <item quantity="one">You were near someone %1$d day ago who has shared their positive COVID-19 test result.</item>
        <item quantity="other">You were near someone %1$d days ago who has shared their positive COVID-19 test result.</item>
    </plurals>

    <string name="past_exposures">Past exposures</string>

    <string name="actual_copy">[Actual copy to be provided by Public Health Authority]</string>

    <string name="possible_exposure">Possible exposure</string>

    <string name="no_exposures">No exposures</string>

    <string name="btn_start">Get started</string>

    <string name="btn_turn_on">Turn on</string>

    <string name="btn_done">Done</string>

    <string name="btn_not_now">Not now</string>

    <string name="btn_next">Next</string>

    <string name="btn_cancel">Cancel</string>

    <string name="on">On</string>

    <string name="off">Off</string>

    <string name="learn_more">Learn more</string>

    <string name="home_tab_exposures_text">Exposures</string>

    <string name="home_tab_notify_text">Notify others</string>

    <string name="home_tab_notify_debug_text">Debug</string>

    <string name="notify_turn_on_exposure_notifications_header">You can\'t share your positive test results until exposure notifications are turned on</string>

    <string name="turn_on_exposure_notifications_action">Turn on Exposure Notifications</string>

    <string name="exposure_notifications_are_turned_off">Exposure notifications are turned off</string>

    <string name="exposure_notifications">Exposure notifications</string>

    <string name="exposure_about_title">Exposure notifications</string>

    <string name="exposure_about_description">[Actual copy to be provided by Public Health Authority]</string>

    <string name="exposure_about_settings_button_pre_text">You can manage exposure notifications in your device’s settings.</string>

    <string name="exposure_about_settings_button_text">Settings</string>

    <string name="exposure_about_detail">
    These notifications are designed to notify you if you\'ve been exposed to a user who later reports themselves as testing positive for COVID-19. You can choose to turn off these notifications at any time.
    \n\nExposure notifications rely on the sharing and collecting of random IDs. These IDs are a random string of numbers that won\'t identify you to other users and change many times a day to protect your privacy.
    \n\nYour device will collect and share random IDs with nearby devices. This app can notify you if you\'ve been near someone who has reported a positive COVID-19 test result.
    \n\nIf you test positive for COVID-19, you can help your community by reporting your test result.
    \n\nIf you\'re exposed, the time, approximate date, and distance of your exposure are shared with this app. This helps health experts better understand the spread of COVID-19.
  </string>

    <string name="exposure_learn_more_title">About verified test results</string>

    <string name="exposure_learn_more_description">[Actual copy to be provided by Public Health Authority]</string>

    <string name="verify_test_result_title">Enter your test result information</string>

    <string name="verify_test_result_subtitle">
    [Actual copy to be provided by Public Health Authority]
    \n\nOnly those who have been exposed will receive a notification</string>

    <string name="onboarding_welcome_text">Welcome to the Sample Public Health Authority COVID-19 App</string>

    <string name="onboarding_start_text">
    [Actual copy to be provided by Public Health Authority]\n\n
  </string>

    <string name="onboarding_opt_in_title">Turn on COVID-19 Exposure Notifications</string>

    <string name="onboarding_opt_in_text">
    [Actual copy to be provided by Public Health Authority]
    \n\nThese notifications are designed to notify you if you\'ve been exposed to a user who later reports themselves as testing positive for COVID-19. You can choose to turn off these notifications at any time.
    \n\nExposure notifications rely on the sharing and collecting of random IDs. These IDs are a random string of numbers that won\'t identify you to other users and change many times a day to protect your privacy.
    \n\nYour device will collect and share random IDs with nearby devices. This app can notify you if you\'ve been near someone who has reported a positive COVID-19 test result.
    \n\nIf you test positive for COVID-19, you can also help your community by reporting your test result.
    \n\nIf you’re exposed, the time, approximate date, and distance of your exposure are shared with this app. This helps health experts better understand the spread of COVID-19. These details aren’t associated with your random IDs to protect your privacy.
  </string>

    <string name="onboarding_finish_title">It\'s important to your community to share a positive test result</string>

    <string name="onboarding_finish_message">
   [Actual copy to be provided by Public Health Authority]
    \n\nIf you have a positive COVID-19 test result, sharing this information will help notify others who have been exposed. This will help others in your community contain the spread of COVID-19.
    \n\nA positive COVID-19 test result isn\'t reported automatically. This app lets you report your positive test result securely and without identifying you to other users.
  </string>

    <string name="enter_your_test_identifier">Test identifier</string>

    <string name="share_test_identifier_help">The unique test identifier that came with your COVID-19 test must be used to verify your positive test result.</string>

    <string name="test_date_label">Date of test</string>

    <string name="share_test_date_help">The test date helps the app know when you may have been contagious and notify the right people of possible exposure.</string>

    <string name="share_error">Unable to share</string>

    <string name="share_complete_title">Thank you for sharing your test result</string>

    <string name="share_complete_detail">[Actual copy to be provided by Public Health Authority]</string>

    <string name="share_not_complete_title">Test result not shared</string>

    <string name="share_not_complete_detail">[Actual copy to be provided by Public Health Authority]</string>

    <string name="share_not_complete_description">Your test result wasn\'t shared. This test result is saved in the app. You can share or delete your test result at any time.</string>

    <string name="share_test_result">Share positive test result</string>

    <string name="share_test_result_title">Share your positive test result</string>

    <string name="share_test_result_description">If you have tested positive for COVID-19, sharing your test result will help notify others who may have been exposed. This will let others in your community know if they should monitor for symptoms.</string>

    <string name="share_begin_title">Before you get started</string>

    <string name="share_begin_detail">[Actual copy to be provided by Public Health Authority]</string>

    <string name="share_begin_description">
    If you have tested positive for COVID-19, you can help your community by reporting your test result.
    \n\nYou\'ll be asked to share your phone\'s random IDs from the past 14 days. This is used to help notify others you\'ve been near about potential exposure.
    \n\nSharing your random IDs won\'t identify you to other users.
  </string>

    <string name="share_learn_more_title">About test identifiers</string>

    <string name="share_learn_more_description">[Actual copy to be provided by Public Health Authority]</string>

    <string name="share_review_title">Review your information</string>

    <string name="share_review_description">[Actual copy to be provided by Public Health Authority]</string>

    <string name="share_review_positive_test">Positive test result</string>

    <string name="share_review_positive_test_covid">COVID-19</string>

    <string name="share_review_date">Date of test</string>

    <string name="btn_share_positive">Share positive test result</string>

    <string name="btn_share_already_shared">Test result shared</string>

    <string name="btn_delete_positive">Delete test result</string>

    <string name="dialog_delete_positive_test_title">Delete test result?</string>

    <string name="dialog_delete_positive_test_description">Your test result will be deleted from this app</string>

    <string name="dialog_delete_positive_test_action">Delete</string>

    <string name="positive_test_results">Staging</string>

    <string name="no_positive_test_results">No positive test results</string>

    <string name="positive_test_result_status_shared">Shared</string>

    <string name="positive_test_result_status_not_shared">Not shared</string>

    <string name="positive_test_shared_title">Shared COVID-19 test result</string>

    <string name="positive_test_not_shared_title">COVID-19 test result</string>

    <string name="positive_test_description">[Actual copy to be provided by Public Health Authority]</string>

    <string name="positive_test_result_type">COVID-19</string>

    <string name="info_saved_locally">
    Sample Public Health Authority App received info on %1$s.
    \n\nThis report has been saved to this app and you can access it at any time.
  </string>

    <string name="verified_result_explanation">This person\'s test result was verified. You were near this person on %1$s.</string>

    <string name="verified_result_next_steps">Next steps: [Actual copy to be provided by Public Health Authority]</string>

    <string name="done">Done</string>

    <string name="navigate_up">Navigate up</string>

    <string name="reference_only">REFERENCE ONLY</string>

    <string name="notification_title">Possible COVID-19 exposure</string>

    <string name="notification_message">Someone you were near has tested positive for COVID-19. Tap for more info.</string>

    <string name="notification_channel_name">Exposure Notification</string>

    <string name="notification_channel_description">Exposure notification alerts.</string>

    <string name="notifications_enabled_info">You will be notified if you have been exposed to someone who reported a positive COVID-19 result</string>
    <string name="notifications_disabled_info">When exposure notifications are turned off, you won\’t be notified if you\'re exposed to COVID-19</string>

    <string name="turn_off_exposure_notifications_action">TURN OFF EXPOSURE NOTIFICATIONS</string>
    <string name="exposure_notifications_are_turned_on">Exposure notifications are turned on</string>


</resources>
