<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/watermark_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageButton
                android:id="@android:id/home"
                style="?attr/borderlessButtonStyle"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="?attr/homeAsUpIndicator" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:isScrollContainer="false"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_large">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/onboarding_finish_title"
                    android:textAppearance="?attr/textAppearanceHeadline4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:text="@string/onboarding_finish_message"
                    android:textAppearance="?attr/textAppearanceSubtitle1"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/watermark"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:rotation="45"
        android:text="@string/reference_only"
        android:textColor="@color/watermark_color"
        app:autoSizeMaxTextSize="50dp"
        app:autoSizeTextType="uniform" />

</FrameLayout>