<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/home_tab_exposures_text"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settings_banner_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/padding_normal"
                    android:paddingStart="@dimen/padding_large"
                    android:paddingEnd="@dimen/padding_large"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/exposure_notification_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:layout_marginBottom="@dimen/padding_normal"
                        android:text="@string/exposure_notifications_are_turned_on" />

                    <Button
                        android:id="@+id/exposure_notification_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:textColor="@color/colorAccent"
                        android:text="@string/turn_off_exposure_notifications_action"
                        android:layout_gravity="center_horizontal"
                        style="?attr/materialButtonOutlinedStyle" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/exposure_about_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exposure_notifications"
                        android:fontFamily="@font/rubik"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <TextView
                        android:id="@+id/exposure_notifications_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_micro"
                        android:fontFamily="@font/rubik"
                        android:textAppearance="?attr/textAppearanceBody2"
                        tools:text="Off – Dynamic Value"
                        android:textColor="?attr/colorControlNormal" />

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/horizontal_divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:paddingStart="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:fontFamily="@font/rubik"
                android:text="@string/past_exposures"
                android:textAppearance="?attr/textAppearanceOverline" />

            <ViewSwitcher
                android:id="@+id/exposures_list_empty_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureAllChildren="false"
                android:paddingStart="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:layout_marginVertical="@dimen/padding_normal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_exposures"
                    android:fontFamily="@font/rubik"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/exposures_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_exposure_entity"
                    android:nestedScrollingEnabled="false" />

            </ViewSwitcher>

            <include layout="@layout/horizontal_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding_large"
                android:paddingHorizontal="@dimen/padding_large"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_black_24dp"/>

                <TextView
                    android:id="@+id/info_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/rubik"
                    android:paddingHorizontal="@dimen/padding_small"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?attr/colorControlNormal"
                    android:text="@string/notifications_enabled_info" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/create_test_exposure_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:fontFamily="@font/baloo"
                android:textColor="@color/colorAccent"
                android:text="create test exposure"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>